# nornir-imageregistration

./: .gitignore  .gitmodules  LICENSE  README.md  assemble.py  ez_setup.py  image_stats.py  layout.py  nornir-imageregistration.pyproj  nornir-imageregistration.sln  pyproject.toml  requirements-min.txt  requirements.txt  setup.py  tmp_requirements.txt  tmp_setup.py  versionhistory.rst
IO/: mosaicfile.py  stosfile.py
Test/: setup_imagetest.py  test_ImageStats.py  test_SliceToSliceBrute.py  test_core.py
irtools/: __init__.py  alignment_record.py  arrange_mosaic.py  assemble.py  core.py  fftw_manager.py  im_histogram_parser.py  image_stats.py  mosaic.py  stos_brute.py  tile.py
nornir_imageregistration/: Image.py  __init__.py  alignment_record.py  arrange_mosaic.py  assemble.py  assemble_tiles.py  computational_lib.py  core.py  distance_array.py  enum.py  fftw_manager.py  grid_subdivision.py  igrid.py  im_histogram_parser.py  image_permutation_helper.py  image_stats.py  layout.py  local_distortion_correction.py  mmap_metadata.py  mosaic.py  mosaic_tileset.py  nornir_enum.py  nornir_image_types.py  overlapmasking.py  pillow_helpers.py  shared_mem_metadata.py  stos_brute.py  tile.py  tile_overlap.py  tiles.py  tileset.py  tileset_functions.py  transformed_image_data.py  transformed_image_data_shared_memory.py  transformed_image_data_temp_files.py  type_info.py  volume.py
scripts/: nornir-addtransforms.py  nornir-assemble.py  nornir-slicetomosaic.py  nornir-stos-brute.py  nornir-translatemosaic.py
test/: .gitignore  __init__.py  imageutilities.py  picklehelper.py  setup_imagetest.py  test_ImageAlign.py  test_ImageStats.py  test_SliceToSliceBrute.py  test_TileToTileAlignment.py  test_arrange.py  test_assemble.py  test_assembleROIBasics.py  test_assemble_image_region_transform.py  test_assemble_tiles.py  test_assemble_tiles_basics.py  test_core.py  test_grid_division.py  test_image_save_load_convert.py  test_layout.py  test_local_distortion.py  test_overlapmasking.py  test_roi_extraction_from_grid.py  test_tile_overlap.py  test_tiles.py  (+2 more)
(+108 files in other folders)
